--- a/blocks/editorial-carousel/editorial-carousel.css
+++ b/blocks/editorial-carousel/editorial-carousel.css
@@ -21,12 +21,12 @@
 
 @media (width < 768px) {
     .editorial-carousel-container {
-        &.swiper {
-            overflow: visible;
-        }
+        overflow: hidden;
+        padding: var(--Depth-200-8, 0.5rem);
 
         & .editorial-carousel {
             align-items: center;
+            width: min(21.4375rem, 100%);
         }
     }
 }
